[gd_scene load_steps=15 format=3 uid="uid://blljswsk5sc4o"]

[ext_resource type="Script" uid="uid://chcpnijcsm2ik" path="res://Scenes/GameManager.gd" id="1_kln2b"]
[ext_resource type="Script" uid="uid://bsm7te63qn5ct" path="res://Scenes/player.gd" id="1_r150o"]
[ext_resource type="PackedScene" uid="uid://cx5woti4g3xt1" path="res://Scenes/obstacle/standar_obstacle.tscn" id="2_idj7w"]
[ext_resource type="PackedScene" uid="uid://ie84wadau2xh" path="res://Scenes/obstacle/lower_obstacle.tscn" id="3_rgh2o"]
[ext_resource type="PackedScene" uid="uid://cdy1ci68hs0ib" path="res://Scenes/obstacle/upper_obstacle.tscn" id="4_pbw6q"]
[ext_resource type="PackedScene" uid="uid://cwrwekueeraah" path="res://Scenes/coin/coin.tscn" id="5_jw32o"]
[ext_resource type="Script" uid="uid://dstwyjtqxa5ka" path="res://Scenes/ui_manager.gd" id="6_v1gob"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_c1w88"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_r150o"]
sky_material = SubResource("ProceduralSkyMaterial_c1w88")

[sub_resource type="Environment" id="Environment_idj7w"]
background_mode = 2
sky = SubResource("Sky_r150o")
tonemap_mode = 2
ssao_enabled = true
glow_enabled = true

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_c1w88"]
radius = 0.37646484
height = 1.8300781

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rgh2o"]
radius = 0.47027588
height = 1.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_jw32o"]
height = 1.9592285

[sub_resource type="BoxShape3D" id="BoxShape3D_c1w88"]
size = Vector3(10, 0.5, 200)

[node name="GameManager" type="Node3D"]
script = ExtResource("1_kln2b")
ObstacleScene = Array[PackedScene]([ExtResource("2_idj7w"), ExtResource("3_rgh2o"), ExtResource("4_pbw6q")])
PowerUpScene = Array[PackedScene]([ExtResource("5_jw32o")])

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_idj7w")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
shadow_enabled = true

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0085671, 0)
script = ExtResource("1_r150o")

[node name="StandingCollision" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.08496094, 0)
shape = SubResource("CapsuleShape3D_c1w88")

[node name="CrounchedCollision" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.62065125, 0)
shape = SubResource("CapsuleShape3D_rgh2o")

[node name="Model" type="Node3D" parent="Player"]

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Player/Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.36987305, 0)
radius = 0.36376953
height = 1.2602539

[node name="CSGSphere3D" type="CSGSphere3D" parent="Player/Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.46129632, 0)
radius = 0.39595252

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 0.9659259, 0.25881907, 0, -0.25881907, 0.9659258, 0, 2.5145457, 5.9060993)

[node name="UI Manager" type="Control" parent="Player"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_v1gob")

[node name="RichTextLabel" type="RichTextLabel" parent="Player/UI Manager"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -270.0
offset_bottom = 78.0
grow_horizontal = 0
text = "Score:"

[node name="PowerUpCollider" type="Area3D" parent="Player"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player/PowerUpCollider"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.14611816, 0)
shape = SubResource("CapsuleShape3D_jw32o")

[node name="Enviorement" type="Node3D" parent="."]

[node name="StaticBody3D" type="StaticBody3D" parent="Enviorement"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2583598, 0)

[node name="CSGBox3D" type="CSGBox3D" parent="Enviorement/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -67.99776)
size = Vector3(10, 0.5, 200)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Enviorement/StaticBody3D"]
shape = SubResource("BoxShape3D_c1w88")

[node name="ObstacleContainer" type="Node3D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true

[connection signal="ScoreUpdated" from="." to="Player/UI Manager" method="_on_game_manager_score_updated"]
[connection signal="AddScore" from="Player" to="." method="_on_player_add_score"]
[connection signal="area_entered" from="Player/PowerUpCollider" to="Player" method="_on_power_up_collider_area_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
